# ethereum-test

./: .gitignore  ethereum-test.cabal  mgitmods  stack.yaml
ethereum-test/: ethereum-test.cabal
ethereum-test/src/: Main.hs  TestDescriptions.hs  TestFiles.hs
src/: Conversions.hs  Debug.hs  JSON.hs  Main.hs  TestDescriptions.hs  TestFiles.hs  TestStructures.hs
src/blacklists/tests/: .blacklist
src/blacklists/tests/StateTests/: .blacklist
src/blacklists/tests/VMTests/: .blacklist
