
name:                ethereum-test
version:             0.1.0.0
author:              jamshid
maintainer:          jamshid
build-type:          Simple
cabal-version:       >=1.10

executable ethereum-test
  main-is:             Main.hs
  build-depends:       base >=4.7 && <4.8
                     , nibblestring
                     , either
                     , ethereum-client-haskell
                     , ethereum-data-leveldb
                     , ethereum-merkle-patricia-db
                     , ethereum-rlp
                     , haskoin
                     , IfElse
                     , time
                     , transformers
                     , resourcet
                     , aeson
                     , bytestring
                     , base16-bytestring
                     , unordered-containers
                     , mtl
                     , containers
                     , scientific
                     , text
                     , directory
                     , ansi-wl-pprint
  ghc-options:         -Wall -O2
  hs-source-dirs:      src
  default-language:    Haskell2010


