
name:                ethereum-test
version:             0.1.0.0
author:              jamshid
maintainer:          jamshid
build-type:          Simple
cabal-version:       >=1.10

executable ethereum-test
  main-is:             Main.hs
  build-depends:       base
                     , aeson
                     , base16-bytestring
                     , binary
                     , blockapps-data
                     , blockapps-util
                     , bytestring
                     , containers
                     , cryptohash
                     , directory
                     , either
                     , ethereum-rlp
                     , ethereum-vm
                     , filepath
                     , haskoin
                     , hflags
                     , IfElse
                     , leveldb-haskell
                     , merkle-patricia-db
                     , mtl
                     , nibblestring
                     , resourcet
                     , scientific
                     , text
                     , time
                     , transformers
                     , unordered-containers
                     , ansi-wl-pprint
  ghc-options:         -Wall -O2
  hs-source-dirs:      src
  default-language:    Haskell2010


